2008-08-18  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c (bvw_bus_message_cb):
	When we have a streaming title, pass it on using the TITLE_CHANGE
	signal. Fixes stream title not updating for soma.fm streams
	(Closes: #471233)

2008-08-18  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bvw-test.c (on_got_metadata), (on_title_changed),
	(main): Listen to got-metadata and title-change signals

2008-08-18  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/ontop/totem-ontop.c (update_from_state):
	* src/plugins/tracker/totem-tracker-widget.c
	(totem_tracker_widget_set_property):
	* src/totem-cell-renderer-video.c
	(totem_cell_renderer_video_set_property):
	* src/totem-sidebar.c (cb_resize):
	* src/totem-video-indexer.c (totem_print_string),
	(totem_print_int):
	* src/totem-video-thumbnailer.c (has_audio),
	(on_got_metadata_event):
	* src/totem.c (totem_get_nice_name_for_stream), (show_controls):
	Unset GValues after having used them, to make sure they get cleaned
	up, fixes a few memleaks, Use g_value_dup_* functions when necessary

2008-08-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem-session.c (totem_session_restore):
	* src/totem.c (update_mrl_label), (on_error_event),
	(update_seekable): Only seek for session restore once
	we've opened the file, and we know it's seekable,
	fixes restoring playlists from the session, including
	seeking (Closes: #434936)

2008-08-18  Bastien Nocera  <hadess@hadess.net>

	* configure.in: update GTK+ req
	* src/totem-audio-preview.c: remove unneeded gnome
	include
	* src/totem-menu.c (totem_ui_manager_setup):
	* src/totem.c (totem_action_show_help): Use a newer GTK+
	to launch the help, and don't require libgnomeui for that,
	based on patch from Philip Withnall <philip@tecnocode.co.uk>
	(Closes: #514384)

2008-08-18  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_can_deinterlace):
	* src/backend/bacon-video-widget-xine.c