@@ -1,3 +1,8 @@
+2008-08-18  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
+	* src/backend/bacon-video-widget-gst-0.10.c:
+	Add ATSC support for gstreamer dvb.
+
 2008-08-18  Bastien Nocera  <hadess@hadess.net>
 
 	* src/backend/bacon-video-widget-gst-0.10.c (bvw_bus_message_cb):
